Replace NAMESPACE-COMPONENT naming scheme with a more generic one.
Targets can now have any form of name.

Alias name now defaults to ${TARGET_NAME}::${TARGET_NAME}, unless
specified with ALIAS_NAME argument to ntc_target explicitly.

INCLUDE_INFIX has been renamed to HEADER_PREFIX. This also fixes
installation directories for generated headers when HEADER_PREFIX
doesn't end with '/'.

Include directory can now have many subdirectories, all are installed.

Target name is now used to specify cmake files subdir, instead of
NAMESPACE.

--- a/example/ntcexample-exe/CMakeLists.txt
+++ b/example/ntcexample-exe/CMakeLists.txt
@@ -5,9 +5,7 @@
 
 cmake_minimum_required(VERSION 3.16)
 
-set(NAMESPACE ntcexample)
-set(COMPONENT exe)
-project(${NAMESPACE}-${COMPONENT}
+project(ntcexample-exe
         VERSION 0.0.0
         DESCRIPTION "ntcexample executable"
         LANGUAGES CXX
@@ -24,4 +22,4 @@ find_package(ntcexample-lib)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE ntcexample::lib)
 
-ntc_target(${PROJECT_NAME})
+ntc_target(${PROJECT_NAME} ALIAS_NAME ntcexample::exe)
