Properly support header libraries.
This changes installation of cmake configs for header-only libraries
to generic "lib" directory with disabled architecture match check.

Also add an example of header-only libary (specifying sources requires
CMake 3.19).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ endif()
 # in subprojects and establish default for BUILD_SHARED_LIBS.
 include(ntc-dev-build)
 
+add_subdirectory(ntcexample-headerlib)
 add_subdirectory(ntcexample-lib)
 add_subdirectory(ntcexample-exe)
 
